--- a/pafer-german.ipynb
+++ b/pafer-german.ipynb
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "ad201515-9342-40ee-b135-f8a68af733b9",
    "metadata": {
     "tags": []
@@ -1625,11 +1625,16 @@
     "    \n",
     "    # query the size of each sensitive attribute in the dataset\n",
     "    total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
-    "        \n",
+    "    \n",
+    "    valid, invalid = 0, 0\n",
     "    # replace each invalid value with balanced totals\n",
     "    for i, tot in enumerate(total_per_si):\n",
     "        if tot < 0 or tot > len(sens_dataset):\n",
+    "            invalid += 1\n",
     "            total_per_si[i] = (1 / len(S)) * len(sens_dataset)\n",
+    "            \n",
+    "        else:\n",
+    "            valid += 1\n",
     "        \n",
     "    total_per_si = np.array(total_per_si)\n",
     "    \n",
@@ -1644,7 +1649,11 @@
     "\n",
     "            # if invalid answers from query: replace with balanced node value\n",
     "            if answer < 0 or answer > len(sens_dataset):\n",
+    "                invalid += 1\n",
     "                answer = (1 / len(S)) * rule_total\n",
+    "                \n",
+    "            else:\n",
+    "                valid += 1\n",
     "\n",
     "            rule_counts[i] += answer\n",
     "        \n",
@@ -1654,7 +1663,7 @@
     "    \n",
     "    # calculate and return sp\n",
     "    accept_rates = poscounts_per_si / total_per_si\n",
-    "    return np.min(accept_rates) / np.max(accept_rates)\n"
+    "    return np.min(accept_rates) / np.max(accept_rates), invalid, valid\n"
    ]
   },
   {
@@ -1699,13 +1708,17 @@
     "        \n",
     "    actual_sp = statistical_parity(tree.predict(dataset), sens_dataset)\n",
     "    errors = np.zeros((runs, len(mechanisms)))\n",
-    "    S = sorted(sens_dataset.unique())\n",
-    "    \n",
+    "    S = sens_dataset.value_counts(sort=False).index\n",
+    "    invalids = np.zeros(len(mechanisms))\n",
+    "    valids = np.zeros(len(mechanisms))\n",
     "    for row in range(runs):\n",
     "        for col, mechanism in enumerate(mechanisms):\n",
-    "            errors[row, col] = abs(estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta) - actual_sp)\n",
+    "            estimated_sp, invalid, valid = estimate_sp(pos_rules, dataset, sens_dataset, S, mechanism, epsilon, delta)\n",
+    "            invalids[col] += invalid\n",
+    "            valids[col] += valid\n",
+    "            errors[row, col] = abs(estimated_sp - actual_sp)\n",
     "            \n",
-    "    return errors\n"
+    "    return errors, invalids / (valids + invalids)\n"
    ]
   },
   {
@@ -1876,20 +1889,25 @@
     "epsilons = np.linspace(0.01, 0.5, 40)\n",
     "runs = 50\n",
     "\n",
-    "laplace_errs_hist, exp_errs_hist = [], []\n",
-    "laplace_uncert_hist, exp_uncert_hist = [], []\n",
+    "laplace_errs, exp_errs = [], []\n",
+    "laplace_uncert, exp_uncert = [], []\n",
+    "laplace_invalid_ratios, exp_invalid_ratios = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
-    "    sp_errs = experiment(rules, best_tree, german_test_cat_X,\n",
+    "    sp_errs, invalid_ratio = experiment(rules, best_tree, german_test_cat_X,\n",
     "                         german_test_sex, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
     "    uncertainty = std_errs / np.sqrt(runs)\n",
     "    \n",
-    "    laplace_errs_hist.append(avg_errs[0])\n",
-    "    exp_errs_hist.append(avg_errs[1])\n",
-    "    laplace_uncert_hist.append(uncertainty[0])\n",
-    "    exp_uncert_hist.append(uncertainty[1])\n",
+    "    laplace_errs.append(avg_errs[0])\n",
+    "    exp_errs.append(avg_errs[1])\n",
+    "    laplace_uncert.append(uncertainty[0])\n",
+    "    exp_uncert.append(uncertainty[1])\n",
+    "    \n",
+    "    laplace_ratio, exp_ratio = invalid_ratio\n",
+    "    laplace_invalid_ratios.append(laplace_ratio)\n",
+    "    exp_invalid_ratios.append(exp_ratio)\n",
     "    "
    ]
   },
@@ -1902,12 +1920,13 @@
    },
    "outputs": [],
    "source": [
-    "laplace_errs_hist = np.array(laplace_errs_hist)\n",
-    "exp_errs_hist = np.array(exp_errs_hist)\n",
-    "laplace_uncert_hist = np.array (laplace_uncert_hist)\n",
-    "exp_uncert_hist = np.array(exp_uncert_hist)\n",
+    "laplace_errs = np.array(laplace_errs)\n",
+    "exp_errs = np.array(exp_errs)\n",
+    "laplace_uncert = np.array(laplace_uncert)\n",
+    "exp_uncert = np.array(exp_uncert)\n",
+    "laplace_invalid_ratios = np.array(laplace_invalid_ratios)\n",
     "\n",
-    "for arr, name in zip([laplace_errs_hist, exp_errs_hist, laplace_uncert_hist, exp_uncert_hist], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\"]): \n",
+    "for arr, name in zip([laplace_errs, exp_errs, laplace_uncert, exp_uncert, laplace_invalid_ratios], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\", \"laplace_inv_ratio\"]):\n",
     "    with open(f\"german-sex-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
@@ -2769,20 +2788,26 @@
     "epsilons = np.linspace(0.01, 0.5, 40)\n",
     "runs = 50\n",
     "\n",
-    "laplace_errs_hist, exp_errs_hist = [], []\n",
-    "laplace_uncert_hist, exp_uncert_hist = [], []\n",
+    "laplace_errs, exp_errs = [], []\n",
+    "laplace_uncert, exp_uncert = [], []\n",
+    "laplace_invalid_ratios, exp_invalid_ratios = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
-    "    sp_errs = experiment(rules, best_tree, german_test_cat_X,\n",
+    "    sp_errs, invalid_ratio = experiment(rules, best_tree, german_test_cat_X,\n",
     "                         german_test_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
     "    uncertainty = std_errs / np.sqrt(runs)\n",
     "    \n",
-    "    laplace_errs_hist.append(avg_errs[0])\n",
-    "    exp_errs_hist.append(avg_errs[1])\n",
-    "    laplace_uncert_hist.append(uncertainty[0])\n",
-    "    exp_uncert_hist.append(uncertainty[1])"
+    "    laplace_errs.append(avg_errs[0])\n",
+    "    exp_errs.append(avg_errs[1])\n",
+    "    laplace_uncert.append(uncertainty[0])\n",
+    "    exp_uncert.append(uncertainty[1])\n",
+    "    \n",
+    "    laplace_ratio, exp_ratio = invalid_ratio\n",
+    "    laplace_invalid_ratios.append(laplace_ratio)\n",
+    "    exp_invalid_ratios.append(exp_ratio)\n",
+    "    "
    ]
   },
   {
@@ -2794,12 +2819,13 @@
    },
    "outputs": [],
    "source": [
-    "laplace_errs_hist = np.array(laplace_errs_hist)\n",
-    "exp_errs_hist = np.array(exp_errs_hist)\n",
-    "laplace_uncert_hist = np.array (laplace_uncert_hist)\n",
-    "exp_uncert_hist = np.array(exp_uncert_hist)\n",
+    "laplace_errs = np.array(laplace_errs)\n",
+    "exp_errs = np.array(exp_errs)\n",
+    "laplace_uncert = np.array(laplace_uncert)\n",
+    "exp_uncert = np.array(exp_uncert)\n",
+    "laplace_invalid_ratios = np.array(laplace_invalid_ratios)\n",
     "\n",
-    "for arr, name in zip([laplace_errs_hist, exp_errs_hist, laplace_uncert_hist, exp_uncert_hist], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\"]): \n",
+    "for arr, name in zip([laplace_errs, exp_errs, laplace_uncert, exp_uncert, laplace_invalid_ratios], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\", \"laplace_inv_ratio\"]):\n",
     "    with open(f\"german-race-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
@@ -4383,20 +4409,26 @@
     "epsilons = np.linspace(0.01, 0.5, 40)\n",
     "runs = 50\n",
     "\n",
-    "laplace_errs_hist, exp_errs_hist = [], []\n",
-    "laplace_uncert_hist, exp_uncert_hist = [], []\n",
+    "laplace_errs, exp_errs = [], []\n",
+    "laplace_uncert, exp_uncert = [], []\n",
+    "laplace_invalid_ratios, exp_invalid_ratios = [], []\n",
     "for epsilon in tqdm(epsilons):\n",
-    "    sp_errs = experiment(rules, best_tree, german_test_cat_X,\n",
+    "    sp_errs, invalid_ratio = experiment(rules, best_tree, german_test_cat_X,\n",
     "                         german_test_sex_race, epsilon=epsilon, runs=runs, mechanisms=[\"laplacian\", \"exponential\"])\n",
     "    \n",
     "    avg_errs = np.mean(sp_errs, axis=0)\n",
     "    std_errs = np.std(sp_errs, ddof=1, axis=0)\n",
     "    uncertainty = std_errs / np.sqrt(runs)\n",
     "    \n",
-    "    laplace_errs_hist.append(avg_errs[0])\n",
-    "    exp_errs_hist.append(avg_errs[1])\n",
-    "    laplace_uncert_hist.append(uncertainty[0])\n",
-    "    exp_uncert_hist.append(uncertainty[1])"
+    "    laplace_errs.append(avg_errs[0])\n",
+    "    exp_errs.append(avg_errs[1])\n",
+    "    laplace_uncert.append(uncertainty[0])\n",
+    "    exp_uncert.append(uncertainty[1])\n",
+    "    \n",
+    "    laplace_ratio, exp_ratio = invalid_ratio\n",
+    "    laplace_invalid_ratios.append(laplace_ratio)\n",
+    "    exp_invalid_ratios.append(exp_ratio)\n",
+    "    "
    ]
   },
   {
@@ -4408,13 +4440,14 @@
    },
    "outputs": [],
    "source": [
-    "laplace_errs_hist = np.array(laplace_errs_hist)\n",
-    "exp_errs_hist = np.array(exp_errs_hist)\n",
-    "laplace_uncert_hist = np.array (laplace_uncert_hist)\n",
-    "exp_uncert_hist = np.array(exp_uncert_hist)\n",
+    "laplace_errs = np.array(laplace_errs)\n",
+    "exp_errs = np.array(exp_errs)\n",
+    "laplace_uncert = np.array(laplace_uncert)\n",
+    "exp_uncert = np.array(exp_uncert)\n",
+    "laplace_invalid_ratios = np.array(laplace_invalid_ratios)\n",
     "\n",
-    "for arr, name in zip([laplace_errs_hist, exp_errs_hist, laplace_uncert_hist, exp_uncert_hist], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\"]): \n",
-    "    with open(f\"german-race-{name}\", \"wb\") as f:\n",
+    "for arr, name in zip([laplace_errs, exp_errs, laplace_uncert, exp_uncert, laplace_invalid_ratios], [\"laplace_errs\", \"exp_errs\", \"laplace_uncert\", \"exp_uncert\", \"laplace_inv_ratio\"]):\n",
+    "    with open(f\"german-sex_race-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
