--- a/rsq1-compas.ipynb
+++ b/rsq1-compas.ipynb
@@ -587,7 +587,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d6/97vsb8ys2xsd5zzsdl4ndt6c0000gn/T/ipykernel_44508/1967445180.py:2: FutureWarning: The default value of numeric_only in DataFrame.median is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/var/folders/d6/97vsb8ys2xsd5zzsdl4ndt6c0000gn/T/ipykernel_54173/1967445180.py:2: FutureWarning: The default value of numeric_only in DataFrame.median is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  compas_X = compas_X.fillna(compas_X.median())\n"
      ]
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "505f2212-a1d9-44b4-9cc5-49815eb5756c",
    "metadata": {
     "tags": []
@@ -1127,7 +1127,7 @@
     "    return min(accept_rates) / max(accept_rates)\n",
     "\n",
     "\n",
-    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta):\n",
+    "def estimate_sp(pos_ruleset, dataset, sens_dataset, S, mechanism, epsilon, delta=0.001):\n",
     "    \"\"\"Returns the estimated Statistical Parity of a tree for a privacy mechanism\n",
     "    \n",
     "    Args:\n",
@@ -1155,7 +1155,7 @@
     "    \n",
     "    # query the size of each sensitive attribute in the dataset\n",
     "    total_per_si = [oracle(dataset, sens_dataset, base_rule, s_i, mechanism, 0.5 * epsilon, delta) for s_i in S]\n",
-    "        \n",
+    "    \n",
     "    # replace each invalid value with balanced totals\n",
     "    for i, tot in enumerate(total_per_si):\n",
     "        if tot < 0 or tot > len(sens_dataset):\n",
@@ -1177,7 +1177,6 @@
     "                answer = (1 / len(S)) * rule_total\n",
     "\n",
     "            rule_counts[i] += answer\n",
-    "        \n",
     "        \n",
     "        # the distribution for the current rule is added to the total\n",
     "        poscounts_per_si += rule_counts\n",
@@ -2037,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "d9a288ef-b77a-42e8-934c-ca5ebc537432",
    "metadata": {
     "tags": []
@@ -2067,14 +2066,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████| 80/80 [2:36:19<00:00, 117.24s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████| 80/80 [09:44<00:00,  7.30s/it]\n"
      ]
     }
    ],
    "source": [
     "minleafs = np.linspace(0.2, 0.001, 80)\n",
     "print(minleafs)\n",
-    "runs = 50\n",
+    "runs = 3\n",
     "epsilon = 0.1\n",
     "\n",
     "# storage for results\n",
