now supports multiple privacy budgets

--- a/rsq1-compas.ipynb
+++ b/rsq1-compas.ipynb
@@ -587,7 +587,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d6/97vsb8ys2xsd5zzsdl4ndt6c0000gn/T/ipykernel_54173/1967445180.py:2: FutureWarning: The default value of numeric_only in DataFrame.median is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/var/folders/d6/97vsb8ys2xsd5zzsdl4ndt6c0000gn/T/ipykernel_4283/1967445180.py:2: FutureWarning: The default value of numeric_only in DataFrame.median is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  compas_X = compas_X.fillna(compas_X.median())\n"
      ]
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "505f2212-a1d9-44b4-9cc5-49815eb5756c",
    "metadata": {
     "tags": []
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "c4122c8a-e29b-425d-94d1-7ce76285a373",
    "metadata": {
     "tags": []
@@ -2004,9 +2004,9 @@
    "outputs": [],
    "source": [
     "def experiment(trainset, sens_trainset, trainsetname, trainset_labels, testset, sens_testset, testsetname, \n",
-    "               testset_labels, epsilon=0.1, minleaf=0.01, runs=5, combined=False):\n",
-    "    tree_sps = np.zeros(runs)\n",
-    "    estimated_sps = np.zeros(runs)\n",
+    "               testset_labels, epsilons=[0.05, 0.1, 0.15, 0.2, 0.25], minleaf=0.01, runs=5, combined=False):\n",
+    "    tree_sps = np.zeros((runs, len(epsilons)))\n",
+    "    estimated_sps = np.zeros((runs, len(epsilons)))\n",
     "    for i in range(runs):\n",
     "        ruleset = []\n",
     "        while ruleset == [] or ruleset == ['()']:\n",
@@ -2027,71 +2027,42 @@
     "        tree_sps[i] = statistical_parity(best_tree.predict(testset), sens_testset)\n",
     "        \n",
     "        # apply PAFER\n",
-    "        estimated_sps[i] = estimate_sp(ruleset, testset, sens_testset, sorted(sens_testset.unique()), mechanism='laplacian', epsilon=epsilon)\n",
+    "        for j, epsilon in enumerate(epsilons):\n",
+    "            estimated_sps[i, j] = estimate_sp(ruleset, testset, sens_testset, sorted(sens_testset.unique()), mechanism='laplacian', epsilon=epsilon)\n",
     "        \n",
     "    return tree_sps, estimated_sps\n",
-    "        \n",
-    "    "
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "d9a288ef-b77a-42e8-934c-ca5ebc537432",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.2        0.19748101 0.19496203 0.19244304 0.18992405 0.18740506\n",
-      " 0.18488608 0.18236709 0.1798481  0.17732911 0.17481013 0.17229114\n",
-      " 0.16977215 0.16725316 0.16473418 0.16221519 0.1596962  0.15717722\n",
-      " 0.15465823 0.15213924 0.14962025 0.14710127 0.14458228 0.14206329\n",
-      " 0.1395443  0.13702532 0.13450633 0.13198734 0.12946835 0.12694937\n",
-      " 0.12443038 0.12191139 0.11939241 0.11687342 0.11435443 0.11183544\n",
-      " 0.10931646 0.10679747 0.10427848 0.10175949 0.09924051 0.09672152\n",
-      " 0.09420253 0.09168354 0.08916456 0.08664557 0.08412658 0.08160759\n",
-      " 0.07908861 0.07656962 0.07405063 0.07153165 0.06901266 0.06649367\n",
-      " 0.06397468 0.0614557  0.05893671 0.05641772 0.05389873 0.05137975\n",
-      " 0.04886076 0.04634177 0.04382278 0.0413038  0.03878481 0.03626582\n",
-      " 0.03374684 0.03122785 0.02870886 0.02618987 0.02367089 0.0211519\n",
-      " 0.01863291 0.01611392 0.01359494 0.01107595 0.00855696 0.00603797\n",
-      " 0.00351899 0.001     ]\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████| 80/80 [09:44<00:00,  7.30s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████| 80/80 [43:40<00:00, 32.76s/it]\n"
      ]
     }
    ],
    "source": [
     "minleafs = np.linspace(0.2, 0.001, 80)\n",
-    "print(minleafs)\n",
-    "runs = 3\n",
-    "epsilon = 0.1\n",
+    "runs = 50\n",
     "\n",
     "# storage for results\n",
-    "avg_tree_sps = []\n",
-    "avg_estimated_sps = []\n",
-    "avg_errs = []\n",
-    "uncerts = []\n",
-    "eighty_percents = []\n",
+    "tree_sps = []\n",
+    "estimated_sps = []\n",
     "for minleaf in tqdm(minleafs):\n",
-    "    tree_sps, estimated_sps = experiment(compas_train_cat_X, compas_train_sex, \"compas_train_cat_X\", compas_train_y, \n",
-    "                                         compas_test_cat_X, compas_test_sex, \"compas_test_cat_X\", compas_test_y,\n",
-    "                                         epsilon=epsilon, minleaf=minleaf, runs=runs)\n",
+    "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_sex, \"compas_train_cat_X\", compas_train_y, \n",
+    "                                         compas_test_cat_X, compas_test_sex, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
     "    \n",
-    "    avg_tree_sps.append(np.mean(tree_sps))\n",
-    "    avg_estimated_sps.append(np.mean(estimated_sps))\n",
-    "    avg_errs.append(np.mean(np.abs(tree_sps - estimated_sps)))\n",
-    "    uncerts.append(np.std(np.abs(tree_sps - estimated_sps)) / np.sqrt(len(tree_sps)))\n",
-    "    eighty_percents.append((tree_sps >= 0.8))\n",
+    "    tree_sps.append(t_sps)\n",
+    "    estimated_sps.append(e_sps)\n",
     "    "
    ]
   },
@@ -2104,13 +2075,10 @@
    },
    "outputs": [],
    "source": [
-    "avg_tree_sps = np.array(avg_tree_sps)\n",
-    "avg_estimated_sps = np.array(avg_estimated_sps)\n",
-    "avg_errs = np.array(avg_errs)\n",
-    "uncerts = np.array(uncerts)\n",
-    "eighty_percents = np.array(eighty_percents)\n",
+    "tree_sps = np.array(tree_sps)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
     "\n",
-    "for arr, name in zip([avg_tree_sps, avg_estimated_sps, avg_errs, uncerts, eighty_percents], [\"tree_sps\", \"estimated_sps\", \"errs\", \"uncerts\", \"eighty_percents\"]):\n",
+    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
     "    with open(f\"compas-sex-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
@@ -2153,26 +2121,18 @@
    ],
    "source": [
     "minleafs = np.linspace(0.2, 0.001, 80)\n",
-    "print(minleafs)\n",
     "runs = 50\n",
-    "epsilon = 0.1\n",
     "\n",
     "# storage for results\n",
-    "avg_tree_sps = []\n",
-    "avg_estimated_sps = []\n",
-    "avg_errs = []\n",
-    "uncerts = []\n",
-    "eighty_percents = []\n",
+    "tree_sps = []\n",
+    "estimated_sps = []\n",
     "for minleaf in tqdm(minleafs):\n",
-    "    tree_sps, estimated_sps = experiment(compas_train_cat_X, compas_train_race, \"compas_train_cat_X\", compas_train_y, \n",
-    "                                         compas_test_cat_X, compas_test_race, \"compas_test_cat_X\", compas_test_y,\n",
-    "                                         epsilon=epsilon, minleaf=minleaf, runs=runs)\n",
+    "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_race, \"compas_train_cat_X\", compas_train_y, \n",
+    "                                         compas_test_cat_X, compas_test_race, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
     "    \n",
-    "    avg_tree_sps.append(np.mean(tree_sps))\n",
-    "    avg_estimated_sps.append(np.mean(estimated_sps))\n",
-    "    avg_errs.append(np.mean(np.abs(tree_sps - estimated_sps)))\n",
-    "    uncerts.append(np.std(np.abs(tree_sps - estimated_sps)) / np.sqrt(len(tree_sps)))\n",
-    "    eighty_percents.append((tree_sps >= 0.8))"
+    "    tree_sps.append(t_sps)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
    ]
   },
   {
@@ -2184,13 +2144,10 @@
    },
    "outputs": [],
    "source": [
-    "avg_tree_sps = np.array(avg_tree_sps)\n",
-    "avg_estimated_sps = np.array(avg_estimated_sps)\n",
-    "avg_errs = np.array(avg_errs)\n",
-    "uncerts = np.array(uncerts)\n",
-    "eighty_percents = np.array(eighty_percents)\n",
+    "tree_sps = np.array(tree_sps)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
     "\n",
-    "for arr, name in zip([avg_tree_sps, avg_estimated_sps, avg_errs, uncerts, eighty_percents], [\"tree_sps\", \"estimated_sps\", \"errs\", \"uncerts\", \"eighty_percents\"]):\n",
+    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
     "    with open(f\"compas-race-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
@@ -2205,26 +2162,18 @@
    "outputs": [],
    "source": [
     "minleafs = np.linspace(0.2, 0.001, 80)\n",
-    "print(minleafs)\n",
     "runs = 50\n",
-    "epsilon = 0.1\n",
     "\n",
     "# storage for results\n",
-    "avg_tree_sps = []\n",
-    "avg_estimated_sps = []\n",
-    "avg_errs = []\n",
-    "uncerts = []\n",
-    "eighty_percents = []\n",
+    "tree_sps = []\n",
+    "estimated_sps = []\n",
     "for minleaf in tqdm(minleafs):\n",
-    "    tree_sps, estimated_sps = experiment(compas_train_cat_X, compas_train_sex_race, \"compas_train_cat_X\", compas_train_y, \n",
-    "                                         compas_test_cat_X, compas_test_sex_race, \"compas_test_cat_X\", compas_test_y,\n",
-    "                                         epsilon=epsilon, minleaf=minleaf, runs=runs)\n",
+    "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_sex_race, \"compas_train_cat_X\", compas_train_y, \n",
+    "                                         compas_test_cat_X, compas_test_sex_race, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
     "    \n",
-    "    avg_tree_sps.append(np.mean(tree_sps))\n",
-    "    avg_estimated_sps.append(np.mean(estimated_sps))\n",
-    "    avg_errs.append(np.mean(np.abs(tree_sps - estimated_sps)))\n",
-    "    uncerts.append(np.std(np.abs(tree_sps - estimated_sps)) / np.sqrt(len(tree_sps)))\n",
-    "    eighty_percents.append((tree_sps >= 0.8))"
+    "    tree_sps.append(t_sps)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
    ]
   },
   {
@@ -2236,13 +2185,10 @@
    },
    "outputs": [],
    "source": [
-    "avg_tree_sps = np.array(avg_tree_sps)\n",
-    "avg_estimated_sps = np.array(avg_estimated_sps)\n",
-    "avg_errs = np.array(avg_errs)\n",
-    "uncerts = np.array(uncerts)\n",
-    "eighty_percents = np.array(eighty_percents)\n",
+    "tree_sps = np.array(tree_sps)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
     "\n",
-    "for arr, name in zip([avg_tree_sps, avg_estimated_sps, avg_errs, uncerts, eighty_percents], [\"tree_sps\", \"estimated_sps\", \"errs\", \"uncerts\", \"eighty_percents\"]):\n",
+    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
     "    with open(f\"compas-sex_race-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
@@ -2250,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c893e628-f7ff-4903-88a2-6021efce1d14",
+   "id": "ea887d5f-9907-4bbd-aafb-94dd58c45393",
    "metadata": {},
    "outputs": [],
    "source": []
