final version + all visualisations

--- a/pafer-german.ipynb
+++ b/pafer-german.ipynb
@@ -1171,7 +1171,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x13f799550>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1192d7290>"
       ]
      },
      "execution_count": 11,
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ea2ffd6c-2907-49cb-8a14-5f9660935ca3",
    "metadata": {
     "tags": []
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "be9b2379-2f47-42e5-a530-5845408a9b37",
    "metadata": {
     "tags": []
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "bbcfdaf8-0fb3-47c0-8fb5-30f1029c556b",
    "metadata": {
     "tags": []
@@ -1345,13 +1345,13 @@
    "source": [
     "plt.figure(figsize=(30,30))\n",
     "plot_tree(best_tree, feature_names=german_train_cat_X.columns, filled=True, node_ids=True)\n",
-    "plt.savefig(\"germantree\", dpi=800)\n",
+    "plt.savefig(\"germantree\", dpi=300)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "8e2403d6-5931-4ee0-913c-6ed3719de42a",
    "metadata": {
     "tags": []
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "1f12f0ed-e1dd-4ea3-b27a-c69307bd703e",
    "metadata": {
     "tags": []
@@ -1418,7 +1418,7 @@
        " 8: \"(german_test_cat_X['Status of existing checking account_A14']> 0.5  )\"}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "6ade91c8-d3e5-4031-9f8e-1c4fffc7ab5b",
    "metadata": {
     "tags": []
@@ -1464,7 +1464,7 @@
        " \"(german_test_cat_X['Status of existing checking account_A14']> 0.5  )\"]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "483e2be0-af57-4d19-a22f-c15880409ec2",
    "metadata": {
     "tags": []
@@ -1497,10 +1497,10 @@
     {
      "data": {
       "text/plain": [
-       "125.08929259695034"
+       "124.21426102529672"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "ad201515-9342-40ee-b135-f8a68af733b9",
    "metadata": {
     "tags": []
@@ -1672,6 +1672,45 @@
    "metadata": {},
    "source": [
     "## PAFER Experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5b3addfc-a4b8-46a6-bf44-7b183d4c7a6b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "german_lps = np.array([statistical_parity(german_test_y, german_test_race), statistical_parity(german_test_y, german_test_sex), statistical_parity(german_test_y, german_test_sex_race)])\n",
+    "\n",
+    "with open(f\"german-label-parities\", \"wb\") as f:\n",
+    "    np.save(f, german_lps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "aefb094b-fff9-4b24-87bb-cdd8621dfcba",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8984910836762688\n",
+      "0.8956068503350707\n",
+      "0.7816593886462883\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(statistical_parity(y_pred, german_test_race))\n",
+    "print(statistical_parity(y_pred, german_test_sex))\n",
+    "print(statistical_parity(y_pred, german_test_sex_race))"
    ]
   },
   {
