Added ccp_alpha hyperparameter

--- a/rsq1-compas.ipynb
+++ b/rsq1-compas.ipynb
@@ -1250,7 +1250,7 @@
    },
    "outputs": [],
    "source": [
-    "def find_best_tree(dataset, dataset_labels, minleaf=0.01):\n",
+    "def find_best_tree(dataset, dataset_labels, minleaf=1, ccp_alpha=0.01):\n",
     "    \"\"\"Train a tree for balanced accuracy performance using grid search. \n",
     "    \n",
     "    dataset: The training data (without sensitive attributes!).\n",
@@ -1264,10 +1264,9 @@
     "    # no random_state because we want a different tree each run\n",
     "    tree = DecisionTreeClassifier()\n",
     "\n",
-    "    # TODO: add other hyperparameters\n",
     "    parameter_grid = {\"criterion\":[\"entropy\", \"gini\"],\n",
     "                      \"max_features\":[\"sqrt\", \"log2\"], \n",
-    "                      \"min_samples_leaf\":[minleaf]}\n",
+    "                      \"min_samples_leaf\":[minleaf], \"ccp_alpha\": [ccp_alpha]}\n",
     "    \n",
     "    # train and return the best tree\n",
     "    tree_cv = GridSearchCV(tree, param_grid=parameter_grid, scoring='balanced_accuracy', n_jobs=2, cv=3, verbose=0)\n",
@@ -1275,7 +1274,7 @@
     "    best_tree = tree_cv.best_estimator_\n",
     "    return best_tree\n",
     "\n",
-    "best_tree = find_best_tree(compas_train_cat_X, compas_train_y, minleaf=0.05)"
+    "best_tree = find_best_tree(adult_train_cat_X, adult_train_y, ccp_alpha=0.2)"
    ]
   },
   {
@@ -1461,7 +1460,7 @@
    "outputs": [],
    "source": [
     "def experiment(trainset, sens_trainset, trainsetname, trainset_labels, testset, sens_testset, testsetname, \n",
-    "               testset_labels, epsilons=[0.05, 0.1, 0.15, 0.2, 0.25], minleaf=0.01, runs=5, combined=False):\n",
+    "               testset_labels, epsilons=[0.05, 0.1, 0.15, 0.2, 0.25], minleaf=1, ccp_alpha=0.0, runs=5, combined=False):\n",
     "    \"\"\"Performs an experiment as described in the paper.\n",
     "    \n",
     "    trainset: The DataFrame containing the training instances.\n",
@@ -1494,7 +1493,7 @@
     "            dataset, dataset_labels, sens_dataset = bootstrap(trainset, trainset_labels, sens_trainset)\n",
     "            \n",
     "            # build tree \n",
-    "            best_tree = find_best_tree(trainset, trainset_labels, minleaf)\n",
+    "            best_tree = find_best_tree(trainset, trainset_labels, minleaf, ccp_alpha)\n",
     "        \n",
     "            # extract positive rules\n",
     "            prune_duplicate_leaves(best_tree)\n",
@@ -1534,14 +1533,15 @@
     "# script to run the experiments\n",
     "# TODO: current datastructures are not optimal or intuitive so could be helpful to streamline (for plotting)\n",
     "minleafs = np.linspace(0.2, 0.001, 10)\n",
+    "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 5\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
     "estimated_sps = []\n",
-    "for minleaf in tqdm(minleafs):\n",
+    "for ccp_alpha in tqdm(ccp_alphas):\n",
     "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_sex, \"compas_train_cat_X\", compas_train_y, \n",
-    "                                         compas_test_cat_X, compas_test_sex, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
+    "                                         compas_test_cat_X, compas_test_sex, \"compas_test_cat_X\", compas_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
     "    estimated_sps.append(e_sps)\n",
@@ -1603,14 +1603,15 @@
    ],
    "source": [
     "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
     "estimated_sps = []\n",
-    "for minleaf in tqdm(minleafs):\n",
+    "for ccp_alpha in tqdm(ccp_alphas):\n",
     "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_race, \"compas_train_cat_X\", compas_train_y, \n",
-    "                                         compas_test_cat_X, compas_test_race, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
+    "                                         compas_test_cat_X, compas_test_race, \"compas_test_cat_X\", compas_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
     "    estimated_sps.append(e_sps)\n",
@@ -1644,14 +1645,15 @@
    "outputs": [],
    "source": [
     "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
     "estimated_sps = []\n",
-    "for minleaf in tqdm(minleafs):\n",
+    "for ccp_alpha in tqdm(ccp_alphas):\n",
     "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_sex_race, \"compas_train_cat_X\", compas_train_y, \n",
-    "                                         compas_test_cat_X, compas_test_sex_race, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
+    "                                         compas_test_cat_X, compas_test_sex_race, \"compas_test_cat_X\", compas_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
     "    estimated_sps.append(e_sps)\n",
